other-vpol/check-node-for-cve-2022-0185/.chainsaw-test/exceptions.yaml
apiVersion: policies.kyverno.io/v1
kind: PolicyException
metadata:
  name: check-kernel-exception
  namespace: policy-exceptions
spec:
  policyRefs:
  - kind: ValidatingPolicy
    name: check-kernel
  allowedValues: ['5.10.84-1']
  matchConditions:
  - name: exact-node
    expression: object.metadata.?namespace.orValue('') == '' && object.metadata.name == 'vulnerable-node'
