other-vpol/check-node-for-cve-2022-0185/.chainsaw-test/node.yaml
apiVersion: v1
kind: Node
metadata:
  name: vulnerable-node
status:
  nodeInfo:
    kernelVersion: 5.10.84-1
---
apiVersion: v1
kind: Node
metadata:
  name: safe-node
status:
  nodeInfo:
    kernelVersion: 5.15.3
---
apiVersion: v1
kind: Node
metadata:
  name: protected-node
status:
  nodeInfo:
    kernelVersion: 5.10.84-1
