other-vpol/check-node-for-cve-2022-0185/.chainsaw-test/policy-ready.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: check-kernel
status:
  conditionStatus:
    (conditions[?type == 'RBACPermissionsGranted']):
    - status: "True"
      reason: Succeeded
    (conditions[?type == 'WebhookConfigured']):
    - status: "True"
      reason: Succeeded
