other-vpol/check-node-for-cve-2022-0185/.chainsaw-test/rbac-reporting.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: kyverno-policy-test-kernel-reporting
  labels:
    rbac.kyverno.io/aggregate-to-reports-controller: "true"
rules:
- apiGroups: [""]
  resources: [nodes]
  verbs: [get, list, watch]
